--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -23229,6 +23229,23 @@
       <td>Institute of Electrical and Electronics Engineers (IEEE)</td>
       <td>电气电子工程师学会</td>
       <td>United States</td>
+      <td>IEEE International Conference on Networks, Sensing, and Control</td>
+      <td>IEEE网络、传感与控制国际会议</td>
+      <td>Jiangsu Province</td>
+      <td>江苏省</td>
+      <td>International Relations/Exchange, Science and Technology</td>
+      <td>2020-10-30</td>
+      <td>2020-11-02</td>
+      <td>Nanjing University School of Management and Engineering</td>
+      <td>南京大学工程管理学院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Institute of Electrical and Electronics Engineers (IEEE)</td>
+      <td>电气电子工程师学会</td>
+      <td>United States</td>
       <td>2019 IEEE International Conference on Multimedia and Expo</td>
       <td>2019 IEEE多媒体与博览国际学术会议</td>
       <td>Shanghai City</td>
@@ -23255,23 +23272,6 @@
       <td>2019-03-22</td>
       <td>Tongji University School for Electronic and Information Engineering</td>
       <td>同济大学电子与信息工程学院</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Institute of Electrical and Electronics Engineers (IEEE)</td>
-      <td>电气电子工程师学会</td>
-      <td>United States</td>
-      <td>IEEE International Conference on Networks, Sensing, and Control</td>
-      <td>IEEE网络、传感与控制国际会议</td>
-      <td>Jiangsu Province</td>
-      <td>江苏省</td>
-      <td>International Relations/Exchange, Science and Technology</td>
-      <td>2020-10-30</td>
-      <td>2020-11-02</td>
-      <td>Nanjing University School of Management and Engineering</td>
-      <td>南京大学工程管理学院</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -40399,6 +40399,23 @@
       <td>Sunflower Helping and Encouraging Poor Pupils Association</td>
       <td>向阳花助学励志会（香港）</td>
       <td>Hong Kong</td>
+      <td>Post-Update Contributions to Duyun</td>
+      <td>更新后向阳花都匀捐助活动</td>
+      <td>Guizhou Province</td>
+      <td>贵州省</td>
+      <td>Aging, Education, Poverty Alleviation</td>
+      <td>2020-11-01</td>
+      <td>2021-11-01</td>
+      <td>Guizhou Province, Duyun City Old-Age University</td>
+      <td>贵州省都匀市老年大学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Sunflower Helping and Encouraging Poor Pupils Association</td>
+      <td>向阳花助学励志会（香港）</td>
+      <td>Hong Kong</td>
       <td>Financial Aid to Impoverished Students (Luodian County)</td>
       <td>香港向阳花资助贫困学生(罗甸)</td>
       <td>Guizhou Province</td>
@@ -40406,6 +40423,23 @@
       <td>Education, Poverty Alleviation, Youth</td>
       <td>2018-09-10</td>
       <td>2019-09-10</td>
+      <td>Luodian County Bianyang Middle School</td>
+      <td>罗甸县边阳中学校</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Sunflower Helping and Encouraging Poor Pupils Association</td>
+      <td>向阳花助学励志会（香港）,向阳花助学励志会（香港）</td>
+      <td>Hong Kong</td>
+      <td>Contributions to Luodian</td>
+      <td>向阳花罗甸捐助活动</td>
+      <td>Guizhou Province</td>
+      <td>贵州省</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>2020-11-07</td>
+      <td>2021-11-07</td>
       <td>Luodian County Bianyang Middle School</td>
       <td>罗甸县边阳中学校</td>
       <td>School, College, University, or Training Institution</td>
@@ -40510,40 +40544,6 @@
       <td>2017-10-22</td>
       <td>Luodian County, Bianyang Town Middle School</td>
       <td>罗甸边阳中学校</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Sunflower Helping and Encouraging Poor Pupils Association</td>
-      <td>向阳花助学励志会（香港）</td>
-      <td>Hong Kong</td>
-      <td>Post-Update Contributions to Duyun</td>
-      <td>更新后向阳花都匀捐助活动</td>
-      <td>Guizhou Province</td>
-      <td>贵州省</td>
-      <td>Aging, Education, Poverty Alleviation</td>
-      <td>2020-11-01</td>
-      <td>2021-11-01</td>
-      <td>Guizhou Province, Duyun City Old-Age University</td>
-      <td>贵州省都匀市老年大学</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Sunflower Helping and Encouraging Poor Pupils Association</td>
-      <td>向阳花助学励志会（香港）,向阳花助学励志会（香港）</td>
-      <td>Hong Kong</td>
-      <td>Contributions to Luodian</td>
-      <td>向阳花罗甸捐助活动</td>
-      <td>Guizhou Province</td>
-      <td>贵州省</td>
-      <td>Education, Poverty Alleviation, Youth</td>
-      <td>2020-11-07</td>
-      <td>2021-11-07</td>
-      <td>Luodian County Bianyang Middle School</td>
-      <td>罗甸县边阳中学校</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -51971,6 +51971,278 @@
       <td>Unknown</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>AFS Intercultural Programs, Inc.</td>
+      <td>AFS国际文化交流组织</td>
+      <td>United States</td>
+      <td>AFS Intercultural Program</td>
+      <td>AFS国际文化交流项目</td>
+      <td>Anhui Province / Liaoning Province / Beijing City / Jiangsu Province / Guangdong Province / Hebei Province / Heilongjiang Province / Henan Province / Shanghai City / Shandong Province / Jiangxi Province / Sichuan Province / Hainan Province / Shanxi Province / Zhejiang Province / Fujian Province / Tianjin City / Chongqing City</td>
+      <td>安徽省,辽宁省,北京市,江苏省,广东省,河北省,黑龙江省,河南省,上海市,山东省,江西省,四川省,海南省,山西省,浙江省,福建省,天津市,重庆市</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>2020-11-09</td>
+      <td>2021-10-31</td>
+      <td>China Education Association for International Exchange</td>
+      <td>中国教育国际交流协会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Bank of China Poverty Alleviation Student Financial Aid Charitable Foundation Limited</td>
+      <td>中国银行扶贫助学慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Chunhua County Program to Improve and Upgrade Rural Boarding School Facilities</td>
+      <td>淳化县农村寄宿制学校取暖设施提升改造项目</td>
+      <td>Shaanxi Province</td>
+      <td>陕西省</td>
+      <td>Education, Infrastructure, Rural Issues/Development, Youth</td>
+      <td>2020-11-01</td>
+      <td>2021-02-28</td>
+      <td>Beijing Bank of China Charitable Foundation</td>
+      <td>北京中银慈善基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>无</td>
+    </tr>
+    <tr>
+      <td>Chiang Chen Industrial Charity Foundation</td>
+      <td>蒋震工业慈善基金（香港）有限公司</td>
+      <td>Hong Kong</td>
+      <td>Scholarship Contributions to the Huazhong University of Science and Technology Education Development Foundation</td>
+      <td>蒋震工业慈善基金向华中科技大学教育发展基金会捐赠奖</td>
+      <td>Hubei Province</td>
+      <td>湖北省</td>
+      <td>Education</td>
+      <td>2020-11-15</td>
+      <td>2021-08-31</td>
+      <td>Huazhong University of Science and Technology Education Development Foundation</td>
+      <td>华中科技大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Greenpeace</td>
+      <td>绿色和平</td>
+      <td>The Netherlands</td>
+      <td>"Helping Green and Low-Carbon New Infrastructure" Project</td>
+      <td>“助力绿色低碳新基建”项目</td>
+      <td>Beijing City / Shanghai City / Guangdong Province / Hebei Province / Shanxi Province / Shaanxi Province / Inner Mongolia Autonomous Region</td>
+      <td>北京市,上海市,广东省,河北省,山西省,陕西省,内蒙古自治区</td>
+      <td>Environment, Infrastructure</td>
+      <td>2020-10-01</td>
+      <td>2021-05-31</td>
+      <td>All-China Environment Federation</td>
+      <td>中华环保联合会</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>House of Blessings Foundation Limited</td>
+      <td>欢乐之家基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Zhao County Program to Care for Children in Difficult Circumstances</td>
+      <td>赵县困境儿童关爱项目</td>
+      <td>Hebei Province</td>
+      <td>河北省</td>
+      <td>Poverty Alleviation, Youth</td>
+      <td>2020-11-01</td>
+      <td>2021-10-31</td>
+      <td>Amity Foundation</td>
+      <td>爱德基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Jiangsu Province United Front Work Department</td>
+      <td>江苏省委统战部</td>
+    </tr>
+    <tr>
+      <td>Huaying Culture and Education Foundation</td>
+      <td>华英文教基金会</td>
+      <td>Unknown</td>
+      <td>Nanjing University “Huaying Culture and Education Fund”</td>
+      <td>南京大学“华英文教基金”</td>
+      <td>Jiangsu Province</td>
+      <td>江苏省</td>
+      <td>Arts and Culture, Education</td>
+      <td>2020-11-02</td>
+      <td>2021-11-02</td>
+      <td>Nanjing University Education Foundation</td>
+      <td>南京大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Jiangsu Department of Education</td>
+      <td>江苏省教育厅</td>
+    </tr>
+    <tr>
+      <td>Japan International Cooperation Group</td>
+      <td>日本国际协力财团</td>
+      <td>Japan</td>
+      <td>Jilin Province Education Fund for Scholarships for Excellent Impoverished Students</td>
+      <td>吉林省教育基金优秀特困生奖学金</td>
+      <td>Jilin Province</td>
+      <td>吉林省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-11-01</td>
+      <td>2021-10-31</td>
+      <td>Jilin Education Foundation Management Council</td>
+      <td>吉林省教育基金管理理事会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Kwang Hua Educational Foundation Limited</td>
+      <td>光华教育基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Donations to Establish the Nanjing University Humanities Fund</td>
+      <td>光华教育基金会捐设南京大学人文基金</td>
+      <td>Jiangsu Province</td>
+      <td>江苏省</td>
+      <td>Education</td>
+      <td>2020-11-02</td>
+      <td>2021-11-02</td>
+      <td>Nanjing University Education Foundation</td>
+      <td>南京大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Jiangsu Department of Education</td>
+      <td>江苏省教育厅</td>
+    </tr>
+    <tr>
+      <td>Macau Xin Hui Si Qian Natives Association</td>
+      <td>澳门新会司前同乡会</td>
+      <td>Macau</td>
+      <td>Siqian Town 2019 Macau Xin Hui Si Qian Natives Association Student Financial Aid Activity</td>
+      <td>司前镇2020年澳门新会区司前同乡会助学活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-11-20</td>
+      <td>2020-12-31</td>
+      <td>Jiangmen City, Xinhui District, Siqian Town Public Welfare Office</td>
+      <td>江门市新会区司前镇公共服务办公室</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Mondelēz International Foundation</td>
+      <td>亿滋国际基金会</td>
+      <td>United States</td>
+      <td>Mondelēz Hope Kitchen Nutrition &amp; Healthy Lifestyles Program</td>
+      <td>亿滋希望厨房计划</td>
+      <td>Beijing City / Shanghai City / Guangxi Zhuang Autonomous Region / Hubei Province</td>
+      <td>北京市,上海市,广西壮族自治区,湖北省</td>
+      <td>Health, Rural Issues/Development, Youth</td>
+      <td>2020-09-25</td>
+      <td>2021-09-25</td>
+      <td>China Youth Development Foundation</td>
+      <td>中国青少年发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Communist Youth League Central Committee</td>
+      <td>共青团中央委员会</td>
+    </tr>
+    <tr>
+      <td>Nanjing (H.K.) Association Limited</td>
+      <td>香港南京总会</td>
+      <td>Hong Kong</td>
+      <td>Nanjing University “Nanjing (H.K.) Association Limited Scholarship”</td>
+      <td>南京大学“香港南京总会奖学金”</td>
+      <td>Jiangsu Province</td>
+      <td>江苏省</td>
+      <td>Education</td>
+      <td>2020-11-02</td>
+      <td>2021-11-02</td>
+      <td>Nanjing University Education Foundation</td>
+      <td>南京大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Jiangsu Department of Education</td>
+      <td>江苏省教育厅</td>
+    </tr>
+    <tr>
+      <td>Nitori International Scholarship Foundation</td>
+      <td>公益财团法人 似鸟国际奖学财团</td>
+      <td>Japan</td>
+      <td>Nantong University NITORI International Scholarship</td>
+      <td>南通大学NITORI国际奖学金</td>
+      <td>Jiangsu Province</td>
+      <td>江苏省</td>
+      <td>Education</td>
+      <td>2020-09-01</td>
+      <td>2021-06-30</td>
+      <td>Nantong University Education Development Foundation</td>
+      <td>南通大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Jiangsu Province Department of Education</td>
+      <td>江苏省教育厅</td>
+    </tr>
+    <tr>
+      <td>Sun Hung Kai Properties—Kwoks’ Foundation Limited</td>
+      <td>新鸿基地产郭氏基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Nanjing University Student Financial Aid 2020</td>
+      <td>南京大学“新鸿基地产郭氏基金助学金”（2020）</td>
+      <td>Jiangsu Province</td>
+      <td>江苏省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-11-02</td>
+      <td>2021-11-02</td>
+      <td>Nanjing University Education Foundation</td>
+      <td>南京大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Jiangsu Department of Education</td>
+      <td>江苏省教育厅</td>
+    </tr>
+    <tr>
+      <td>The Industry and Commerce Association of Macau</td>
+      <td>澳门工商联会</td>
+      <td>Macau</td>
+      <td>"Products" Macau Fuhuali Trade Fair</td>
+      <td>「品」澳廊 富华里展销会</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Trade/Industry Association</td>
+      <td>2020-11-12</td>
+      <td>2020-11-15</td>
+      <td>Zhuhai City Youth Entrepreneur Association</td>
+      <td>珠海市青年企业家协会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Zhuhai City Communist Youth League Committee</td>
+      <td>共青团珠海市委员会</td>
+    </tr>
+    <tr>
+      <td>The Japan Science Society</td>
+      <td>日本科学协会</td>
+      <td>Japan</td>
+      <td>2020 Sasakawa Cup Japan Research Paper Competition</td>
+      <td>2020笹川杯日本研究论文大赛</td>
+      <td>Jilin Province</td>
+      <td>吉林省</td>
+      <td>Education, International Relations/Exchange, Science and Technology</td>
+      <td>2020-09-30</td>
+      <td>2021-04-30</td>
+      <td>Jilin University</td>
+      <td>吉林大学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Zheng Sheng Charity Fund Limited</td>
+      <td>正生基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Subsidizing the Children of Especially Impoverished Families to Attend School</td>
+      <td>资助贫困家庭子女上学</td>
+      <td>Fujian Province</td>
+      <td>福建省</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>2020-11-16</td>
+      <td>2021-11-15</td>
+      <td>Shunchang County Zheng Sheng Academy</td>
+      <td>顺昌县正生书院</td>
+      <td>Non-profit or Foundation</td>
+      <td>Shunchang District Bureau of Education</td>
+      <td>顺昌县教育局</td>
     </tr>
   </tbody>
 </table>
