--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1502,7 +1502,7 @@
       <td>Shanghai Administration of Market Regulation</td>
       <td>上海市市场监督管理局</td>
       <td>Denmark</td>
-      <td>Trade/Industry Association</td>
+      <td>Agriculture, Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2020-10-09</td>
       <td>China</td>
@@ -2595,6 +2595,17 @@
       <td>Yunnan</td>
       <td>2017-04-10</td>
       <td>Yunnan</td>
+    </tr>
+    <tr>
+      <td>Hungary Industrial Park Committee China Department</td>
+      <td>匈牙利工业园委员会中国部</td>
+      <td>Hubei Office of Overseas Chinese Affairs</td>
+      <td>湖北省人民政府侨务办公室</td>
+      <td>Hungary</td>
+      <td>Arts and Culture, Economic Development, International Relations/Exchange, Science and Technology, Trade/Industry Association</td>
+      <td>Hubei</td>
+      <td>2020-11-18</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Hyderabad Chamber of Commerce and Industry</td>
@@ -4483,7 +4494,7 @@
       <td>Shanghai Commission of Science and Technology</td>
       <td>上海市科学技术委员会</td>
       <td>Russia</td>
-      <td>International Relations/Exchange, Science and Technology</td>
+      <td>Education, International Relations/Exchange, Science and Technology</td>
       <td>Shanghai</td>
       <td>2020-09-14</td>
       <td>China</td>
