--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -276,6 +276,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>American Society of Civil Engineers</td>
+      <td>土木工程师学会</td>
+      <td>Beijing Commission of Science and Technology</td>
+      <td>北京市科学技术委员会</td>
+      <td>United Kingdom</td>
+      <td>Science and Technology, Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2020-12-03</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Animals Asia Foundation</td>
       <td>亚洲动物基金有限公司</td>
       <td>Sichuan Forestry and Grassland Administration (formerly Sichuan Forestry Administration)</td>
@@ -945,6 +956,17 @@
       <td>Yunnan</td>
       <td>2020-03-31</td>
       <td>Gansu, Guangxi, Guizhou, Hainan, Hebei, Inner Mongolia, Ningxia, Shaanxi, Shanxi, Yunnan</td>
+    </tr>
+    <tr>
+      <td>Chile-China Chamber of Commerce</td>
+      <td>智利华商联合总会</td>
+      <td>Shanghai Hongqiao Business District Management Committee</td>
+      <td>上海虹桥商务区管理委员会</td>
+      <td>Chile</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-12-03</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>China Cable Chamber of Commerce (Beijing)</td>
@@ -4049,6 +4071,17 @@
       <td>Liaoning</td>
     </tr>
     <tr>
+      <td>New Zealand China International Trade Association Inc.</td>
+      <td>新西兰中国国际贸易促进委员会</td>
+      <td>Shanghai Hongqiao Business District Management Committee</td>
+      <td>上海虹桥商务区管理委员会</td>
+      <td>New Zealand</td>
+      <td>Science and Technology, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2020-12-03</td>
+      <td>Anhui, Fujian, Jiangsu, Jiangxi, Shandong, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Next-Town Foundation</td>
       <td>下一城基金会</td>
       <td>Henan Department of Education</td>
@@ -4698,6 +4731,17 @@
       <td>Anhui, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Tibet, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Russian Federation Chamber of Commerce and Industry</td>
+      <td>俄罗斯联邦工商会</td>
+      <td>Beijing Bureau of Commerce</td>
+      <td>北京市商务局</td>
+      <td>Russia</td>
+      <td>Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2020-12-04</td>
+      <td>Beijing, Hebei, Inner Mongolia, Jilin, Liaoning, Shandong, Tianjin</td>
+    </tr>
+    <tr>
       <td>Salvation Army (Sichuan)</td>
       <td>救世军</td>
       <td>Sichuan Department of Civil Affairs</td>
@@ -4863,7 +4907,7 @@
       <td>Guangxi</td>
     </tr>
     <tr>
-      <td>Singapore Chinese Chamber of Commerce &amp; Industry</td>
+      <td>Singapore Chinese Chamber of Commerce &amp; Industry (Chongqing)</td>
       <td>新加坡中华总商会</td>
       <td>Chongqing City Sino-Singapore Model Project Management Bureau</td>
       <td>重庆市中新示范项目管理局</td>
@@ -4872,6 +4916,17 @@
       <td>Chongqing</td>
       <td>2020-08-13</td>
       <td>Chongqing</td>
+    </tr>
+    <tr>
+      <td>Singapore Chinese Chamber of Commerce &amp; Industry (Sichuan)</td>
+      <td>新加坡中华总商会</td>
+      <td>Council for the Promotion of International Trade, Sichuan</td>
+      <td>中国国际贸易促进委员会四川省委员会</td>
+      <td>Singapore</td>
+      <td>Trade/Industry Association</td>
+      <td>Sichuan</td>
+      <td>2020-12-02</td>
+      <td>Hubei, Hunan, Inner Mongolia, Jiangxi, Shaanxi, Shanxi, Sichuan</td>
     </tr>
     <tr>
       <td>Singapore Chinese Chamber of Commerce and Industry</td>
@@ -5345,6 +5400,17 @@
       <td>Shanghai</td>
       <td>2019-08-26</td>
       <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jilin, Liaoning, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>The Women’s General Association of Macau Guangdong Office</td>
+      <td>澳门妇女联合总会广东办事处</td>
+      <td>Guangdong Women’s Federation</td>
+      <td>广东省妇女联合会</td>
+      <td>Macau</td>
+      <td>Gender Issues, Youth</td>
+      <td>Guangdong</td>
+      <td>2020-12-02</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>Tin Ka Ping Foundation</td>
