--- a/viz/meinv/meinv_heatmap3.html
+++ b/viz/meinv/meinv_heatmap3.html
@@ -336,7 +336,7 @@
 
     d3.select("body").append("div")
     .attr("class", "tooltip1")
-    .html("<ul><li>This map shows the number of females in the top two positions at three different levels of governance, namely, the provincial, municipal, and county levels. At each of these thre level, there is a Party Secretary and a head of government (a governor, mayor, or the equivalent, depending on the level and the specific province or region).</li><li>In the administrative hierarchy, there are multiple municipalities under each province, and multiple counties under each municipality.</li><li>This map includes data ChinaFile compiled from a website affiliated with <em>The People's Daily</em>, that was updated as of 2017.</li></ul>");
+    .html("<ul><li>This map shows the number of women in the top two positions at the provincial, municipal, and county levels of governance. At each of these three levels, there is a Party Secretary and a head of government (a governor, mayor, or the equivalent, depending on the level and the specific province or region).</li><li>In the administrative hierarchy, there are multiple municipalities under each province, and multiple counties under each municipality.</li><li>This map includes data ChinaFile compiled from a website affiliated with <em>The People&rsquo;s Daily</em>, that was updated as of 2017.</li></ul>");
 
 
 
