--- a/viz/meinv/meinv_heatmap3.html
+++ b/viz/meinv/meinv_heatmap3.html
@@ -148,7 +148,7 @@
   <body>
 
     <div id="wrapper">
-    <div id="header"><h1>Women in Leadership Positions Across China</h1></div>
+    <div id="header"><h1>Women in Leadership Positions across China</h1></div>
     <div id='mapdiv'></div>
     </div>
 
