--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1068,6 +1068,17 @@
       <td>Beijing</td>
     </tr>
     <tr>
+      <td>China-Britain Business Council (Hubei)</td>
+      <td>英中贸易协会</td>
+      <td>Hubei Department of Commerce</td>
+      <td>湖北省商务厅</td>
+      <td>United Kingdom</td>
+      <td>Trade/Industry Association</td>
+      <td>Hubei</td>
+      <td>2021-01-08</td>
+      <td>Henan, Hubei</td>
+    </tr>
+    <tr>
       <td>China-Britain Business Council (Hunan)</td>
       <td>英中贸易协会</td>
       <td>Hunan Department of Commerce</td>
@@ -1275,6 +1286,17 @@
       <td>Fujian</td>
       <td>2017-07-27</td>
       <td>Fujian</td>
+    </tr>
+    <tr>
+      <td>Chinese-Polish Chamber of Commerce</td>
+      <td>波兰中国商会</td>
+      <td>Tianjin Commission of Commerce</td>
+      <td>天津市商务局</td>
+      <td>Poland</td>
+      <td>Trade/Industry Association</td>
+      <td>Tianjin</td>
+      <td>2020-12-25</td>
+      <td>Tianjin</td>
     </tr>
     <tr>
       <td>Christian Action</td>
@@ -4060,7 +4082,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>New Zealand China International Trade Association Inc.</td>
+      <td>New Zealand China International Trade Association Inc. (Liaoning)</td>
       <td>新西兰中国国际贸易促进委员会</td>
       <td>Liaoning Department of Commerce</td>
       <td>辽宁省商务厅</td>
@@ -4071,7 +4093,7 @@
       <td>Liaoning</td>
     </tr>
     <tr>
-      <td>New Zealand China International Trade Association Inc.</td>
+      <td>New Zealand China International Trade Association Inc. (Shanghai)</td>
       <td>新西兰中国国际贸易促进委员会</td>
       <td>Shanghai Hongqiao Business District Management Committee</td>
       <td>上海虹桥商务区管理委员会</td>
@@ -4720,18 +4742,7 @@
       <td>Hunan</td>
     </tr>
     <tr>
-      <td>Russian Federation Chamber of Commerce and Industry</td>
-      <td>俄罗斯联邦工商会</td>
-      <td>Shanghai Commission of Commerce</td>
-      <td>上海市商务委员会</td>
-      <td>Russia</td>
-      <td>Trade/Industry Association</td>
-      <td>Shanghai</td>
-      <td>2017-01-17</td>
-      <td>Anhui, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Tibet, Yunnan, Zhejiang</td>
-    </tr>
-    <tr>
-      <td>Russian Federation Chamber of Commerce and Industry</td>
+      <td>Russian Federation Chamber of Commerce and Industry (Beijing)</td>
       <td>俄罗斯联邦工商会</td>
       <td>Beijing Bureau of Commerce</td>
       <td>北京市商务局</td>
@@ -4740,6 +4751,17 @@
       <td>Beijing</td>
       <td>2020-12-04</td>
       <td>Beijing, Hebei, Inner Mongolia, Jilin, Liaoning, Shandong, Tianjin</td>
+    </tr>
+    <tr>
+      <td>Russian Federation Chamber of Commerce and Industry (Shanghai)</td>
+      <td>俄罗斯联邦工商会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>Russia</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2017-01-17</td>
+      <td>Anhui, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hubei, Hunan, Jiangsu, Jiangxi, Shanghai, Sichuan, Tibet, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Salvation Army (Sichuan)</td>
@@ -4929,7 +4951,7 @@
       <td>Hubei, Hunan, Inner Mongolia, Jiangxi, Shaanxi, Shanxi, Sichuan</td>
     </tr>
     <tr>
-      <td>Singapore Chinese Chamber of Commerce and Industry</td>
+      <td>Singapore Chinese Chamber of Commerce and Industry (Shanghai)</td>
       <td>新加坡中华总商会</td>
       <td>Shanghai Hongqiao Business District Management Committee</td>
       <td>上海虹桥商务区管理委员会</td>
