--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -5270,6 +5270,17 @@
       <td>Fujian</td>
     </tr>
     <tr>
+      <td>Thai-Chinese Chamber of Commerce</td>
+      <td>泰国中华总商会</td>
+      <td>Guangdong Federation of Returned Overseas Chinese</td>
+      <td>广东省侨联</td>
+      <td>Thailand</td>
+      <td>Arts and Culture, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Guangdong</td>
+      <td>2021-01-29</td>
+      <td>Guangdong</td>
+    </tr>
+    <tr>
       <td>Thai-Chinese Culture and Economy Association</td>
       <td>泰国文化经济协会</td>
       <td>Shanghai Hongqiao Business District Management Committee</td>
