--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -661,6 +661,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Cambodia International Chamber of Commerce</td>
+      <td>柬埔寨国际商会</td>
+      <td>Council for the Promotion of International Trade, Hubei</td>
+      <td>中国国际贸易促进会湖北分会</td>
+      <td>Cambodia</td>
+      <td>Arts and Culture, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Hubei</td>
+      <td>2021-02-04</td>
+      <td>Guizhou, Hubei, Jiangsu</td>
+    </tr>
+    <tr>
       <td>Campaign for Tobacco-Free Kids</td>
       <td>无烟草青少年行动基金</td>
       <td>Beijing Health Commission (formerly Beijing Health and Family Planning Commission)</td>
@@ -4401,6 +4412,17 @@
       <td>Anhui, Chongqing, Gansu, Hubei, Hunan, Jiangsu, Qinghai</td>
     </tr>
     <tr>
+      <td>Panama Chinese Chamber of Commerce</td>
+      <td>巴拿马华商总会</td>
+      <td>Council for the Promotion of International Trade, Guangdong</td>
+      <td>中国国际贸易促进委员会广东省委员会</td>
+      <td>Panama</td>
+      <td>Trade/Industry Association</td>
+      <td>Guangdong</td>
+      <td>2021-02-05</td>
+      <td>Guangdong</td>
+    </tr>
+    <tr>
       <td>Partnerships for Community Development</td>
       <td>社区伙伴</td>
       <td>Ministry of Ecology and Environment (formerly Ministry of Environmental Protection)</td>
@@ -5301,6 +5323,17 @@
       <td>Hunan</td>
       <td>2018-10-25</td>
       <td>Hunan</td>
+    </tr>
+    <tr>
+      <td>Thai-Guangxi Commercial Association</td>
+      <td>泰国广西总商会</td>
+      <td>Guangxi Department of Commerce</td>
+      <td>广西壮族自治区商务厅</td>
+      <td>Thailand</td>
+      <td>Trade/Industry Association</td>
+      <td>Guangxi</td>
+      <td>2021-02-05</td>
+      <td>Guangxi</td>
     </tr>
     <tr>
       <td>Thailand-China Eastern Alliance Trade Promotion Council (Hunan)</td>
