--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2036,7 +2036,7 @@
       <td>Shanghai</td>
     </tr>
     <tr>
-      <td>German Machine Tool Builders' Association</td>
+      <td>German Machine Tool Builders’ Association</td>
       <td>德国机床制造商协会</td>
       <td>Council for the Promotion of International Trade, Shanghai</td>
       <td>上海市国际贸易促进委员会</td>
@@ -2760,6 +2760,17 @@
       <td>Shanghai</td>
       <td>2020-08-31</td>
       <td>Anhui, Beijing, Chongqing, Fujian, Gansu, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Jilin, Liaoning, Ningxia, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>InterAction Council</td>
+      <td>国际行动理事会</td>
+      <td>Chinese People’s Association for Friendship with Foreign Countries</td>
+      <td>中国人民对外友好协会</td>
+      <td>Ireland</td>
+      <td>Economic Development, Environment, International Relations/Exchange</td>
+      <td>Beijing</td>
+      <td>2021-02-09</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Intercoiffure Mondial (ICD)</td>
@@ -5894,6 +5905,17 @@
       <td>Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2019-09-27</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>World Federation of Free Trade Zones (WFFTZ)</td>
+      <td>世界自由贸易区联合会</td>
+      <td>Zhejiang Department of Commerce</td>
+      <td>浙江省商务厅</td>
+      <td>United States</td>
+      <td>Trade/Industry Association</td>
+      <td>Zhejiang</td>
+      <td>2021-02-09</td>
       <td>China</td>
     </tr>
     <tr>
