--- a/viz/NSL/NSLcharges_venn.html
+++ b/viz/NSL/NSLcharges_venn.html
@@ -57,8 +57,8 @@ vertical-align: text-top; */
 </style>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="../venn.js"></script>
-<script src="./NSLcharges.jsonp"></script>
+<script src="venn.js"></script>
+<script src="NSLcharges.jsonp"></script>
 
 <script>
 
