--- a/viz/NSL/Arrests_speech.html
+++ b/viz/NSL/Arrests_speech.html
@@ -46,7 +46,7 @@ top:-80px; */
   </div>
 
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="./d3pie.min.js"></script>
+	<script src="d3pie.min.js"></script>
 <script>
 var pie = new d3pie("pieChart", {
 
