--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -694,6 +694,17 @@
       <td>Guizhou, Hubei, Jiangsu</td>
     </tr>
     <tr>
+      <td>Cambodia International Chamber of Commerce</td>
+      <td>柬埔寨国际商会</td>
+      <td>Council for the Promotion of International Trade, Zhejiang</td>
+      <td>浙江省贸易促进会</td>
+      <td>Cambodia</td>
+      <td>Arts and Culture, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Zhejiang</td>
+      <td>2021-03-26</td>
+      <td>Zhejiang</td>
+    </tr>
+    <tr>
       <td>Campaign for Tobacco-Free Kids</td>
       <td>无烟草青少年行动基金</td>
       <td>Beijing Health Commission (formerly Beijing Health and Family Planning Commission)</td>
@@ -2314,7 +2325,7 @@
       <td>Gyonggido Business &amp; Science Accelerator (Liaoning)</td>
       <td>韩国（财）京畿道经济科学振兴院</td>
       <td>Liaoning Department of Commerce</td>
-      <td>辽宁省商务厅\t</td>
+      <td>辽宁省商务厅</td>
       <td>South Korea</td>
       <td>Economic Development, Science and Technology, Trade/Industry Association</td>
       <td>Liaoning</td>
