--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -5050,6 +5050,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>South Africa-China Cross-Border E-Commerce Association</td>
+      <td>南非-中国跨境电商协会</td>
+      <td>Council for the Promotion of International Trade, Shanghai</td>
+      <td>上海市国际贸易促进委员会</td>
+      <td>South Africa</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-03-29</td>
+      <td>Shanghai</td>
+    </tr>
+    <tr>
       <td>South Korea Busan Conference Center</td>
       <td>韩国釜山商工会议所</td>
       <td>Shanghai Commission of Commerce</td>
