--- a/viz/NSL/NSL_categories_grouped_bar1.html
+++ b/viz/NSL/NSL_categories_grouped_bar1.html
@@ -50,6 +50,13 @@ top:-80px; */
   display: none;
 }
 
+.footnote {
+		font-size: 13px;
+		fill: #000;
+		text-align:center;
+		font-family: Georgia, Times, "Times New Roman", serif;
+}
+
 </style>
 <body>
 
@@ -61,7 +68,7 @@ top:-80px; */
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
-var margin = {top: 20, right: 20, bottom: 20, left: 20},
+var margin = {top: 20, right: 20, bottom: 40, left: 20},
     width = 400 - margin.left - margin.right,
     height = 400 - margin.top - margin.bottom;
 
@@ -182,5 +189,10 @@ d3.csv("NSL_categories_group.csv", function(error, data) {
       .text(function(d) { return d; });
 
 });
+
+
+d3.select("body").append("div")
+    .attr("class", "footnote")
+    .html("<em>The Tong Ying-kit case is counted twice in this chart because it involves both the secession and terrorism provisions.</em>");
 
 </script>
