--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -55,8 +55,8 @@ text-align:center;
 </style>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="../venn.js"></script>
-<script src="./arrest_venn.jsonp"></script>
+<script src="venn.js"></script>
+<script src="arrest_venn.jsonp"></script>
 
 <script>
 /////////////////////////////////////////////////////////////////////////////////////////////////////////
