--- a/viz/NSL/charges_venn.html
+++ b/viz/NSL/charges_venn.html
@@ -52,8 +52,8 @@ text-align:center;
 </style>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="../venn.js"></script>
-<script src="./charges.jsonp"></script>
+<script src="venn.js"></script>
+<script src="charges.jsonp"></script>
 
 <script>
 
